--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ body {
   justify-content: center;
   align-items: center;
   padding: 80px;
-  margin-top: -40px;
+  margin-top: -10px;
 }
-h1 {
+.header h1 {
+  font-family: Inter-ExtraBold, sans-serif;
   font-size: 50px;
 }
 .header {
@@ -23,10 +24,11 @@ h1 {
 .topbar {
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  gap: 30px;
 }
 .topbar span {
-  color: #8b8a91;
+  color: #a7a5a8;
+  font-family: Inter-Regular, sans-serif;
 }
 .body {
   display: flex;
@@ -45,11 +47,11 @@ h1 {
   background-color: black;
   color: white;
   width: 40vw;
-  height: 70vh;
+  height: 80vh;
+  padding: 30px;
 }
 .right h1 {
   color: #e3aa58;
-  padding-left: 20px;
 }
 
 .right p {
@@ -62,21 +64,25 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  border-bottom: #3f3f59 solid 1px;
+  gap: 10px;
+}
+.line{
+  width: 250px;
+  height: 0px;
+  color: #464660;
+  margin-top: 30px;
 }
 .news2{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  border-bottom: #3f3f59 solid 1px;
+  gap: 10px;
 }
 .news3{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  gap: 10px;
 }
 
 .pic img {
@@ -87,10 +93,15 @@ h1 {
   margin-top: 50px;
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 10px;
 }
 .text1 {
   width: 200%;
+}
+.text1 h1{
+  font-family: Inter-Bold, sans-serif;
+  font-size: 70px;
+  line-height: 70px;
 }
 .text2 {
   display: flex;
@@ -99,20 +110,27 @@ h1 {
 }
 .text2 p {
   color: #98979e;
+  font-family: Inter-Regular, sans-serif;
+  font-size: 15px; 
+  line-height: 25px; 
 }
 .read {
-  width: 80px;
-  height: 80px;
+  padding: 30px;
+  padding-left: 0px;
 }
 .read a {
   background-color: #ef5d52;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .footer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   margin-top: 100px;
-  gap: 20px;
+  gap: 80px;
 }
 .footer img {
   width: 100px;
@@ -121,7 +139,8 @@ h1 {
 .footer-txt {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  justify-content: center;
+  gap: 5px;
 }
 .footer-txt h1 {
   font-size: 30px;
@@ -132,4 +151,17 @@ h1 {
 }
 .footer-txt p {
   color: #9d9ca6;
+}
+.footer1, .footer2, .footer3 { 
+  display: flex;
+  gap: 20px;
+}
+.footer1{
+  width: 200%;
+}
+.footer2{
+  width: 190%;
+}
+.footer3{
+  width: 190%;
 }
